--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.14.0",
     "javascript-time-ago": "^2.5.4",
     "next": "12.1.6",
     "next-auth": "^4.5.0",
@@ -24,6 +25,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
+    "prisma": "^3.14.0",
     "tailwindcss": "^3.1.2"
   }
 }
